--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -133,9 +133,12 @@
         </div>
       </div>
 
-      <% FedenaPlugin.deliver_registered_hook(:general_settings_form).each do |mod| %>
+      <% FedenaPlugin::REGISTERED_HOOKS[:general_settings_form].each do |mod| %>
         <%= render :partial=>mod.camelize.constantize.send("general_settings_form") %>
       <% end %>
+  <%# FedenaPlugin.deliver_registered_hook(:general_settings_form).each do |mod| %>
+  <%#= render :partial=>mod.camelize.constantize.send("general_settings_form") %>
+  <%# end %>
 
       <div class="extender"></div>
       <br/>
@@ -158,7 +161,11 @@
       <% else %>
         <%= check_box :configuration, :first_time_login_enable, :checked => false %><%= t('enable_first_time_login') %>
       <% end %>
-      <% FedenaPlugin.deliver_registered_hook(:general_settings_checkbox).each do |mod| %>
+      <%# FedenaPlugin.deliver_registered_hook(:general_settings_checkbox).each do |mod| %>
+        <%#*<br/>%>
+        <%#= render :partial=>mod.camelize.constantize.send("general_settings_checkbox") %>
+      <%# end %>
+      <% FedenaPlugin::REGISTERED_HOOKS[:general_settings_checkbox].each do |mod| %>
         <br/>
         <%= render :partial=>mod.camelize.constantize.send("general_settings_checkbox") %>
       <% end %>
