fixes  #3897 [Deleted elective subject name showing in pdf report ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4131 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/timetable/timetable_pdf.erb
+++ b/app/views/timetable/timetable_pdf.erb
@@ -77,7 +77,7 @@
     <div class="electives">
       <% @batch.elective_groups.each do |el| %>
         <div class="group_names"><%= el.name %></div>
-        <% el.subjects.each do |sub| %>
+        <% el.subjects.active.each do |sub| %>
           <div class="subject"><%= sub.name %></div>
           <div class="employee">: <%= sub.employees.collect{|e| e.full_name}.join(',') %></div>
         <% end %>
