fixes  #3901 [Style issue in subject name at the time of adding subject to new elective group ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4132 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/batch_transfers/subject_transfer.css
+++ b/public/stylesheets/batch_transfers/subject_transfer.css
@@ -42,9 +42,10 @@
 }
 
 #category-list li div.category-code {
-    width : 100px;
+    font-size: 13px;
     font-weight: bold;
-    font-size:13px;
+    margin-left: 15px;
+    width: 100px;
 }
 
 #category-list li div.category-edit,
