fixes  #3851 [Add school name and address in Register form  ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4133 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/timetable_entries/new.css
+++ b/public/stylesheets/timetable_entries/new.css
@@ -65,11 +65,19 @@
     padding-top : 10px;
     text-align : center;
 }
+#employee-list {
+    float: left;
+    height: auto;
+    margin-bottom: 20px;
+    width: 100%;
+}
 #errors {
     background-color : #f2d5b2;
     font-size : 0.9em;
-    height : auto; width : 420px;
+    height : auto;
+    width : 420px;
     margin : 50px 0 20px 0;
+    float: left;
 }
 .error-explanation {
     padding : 10px;
