--- a/app/views/employee_attendance/_employee_reset_success.erb
+++ b/app/views/employee_attendance/_employee_reset_success.erb
@@ -28,8 +28,8 @@
     <td><%= t('last_reset_date') %></td>
   </tr>
   <% @leave_count.each do |e| %>
-    <%  leave_type =EmployeeLeaveType.find_by_id(e.employee_leave_type_id)%>
-    <%  if leave_type.status %>
+    <%  leave_type = EmployeeLeaveType.find_by_id(e.employee_leave_type_id)%>
+    <%  if leave_type.present? && leave_type.status %>
       <tr class="tr-<%= cycle('odd','even') %>">
         <td class="col-3"><%=leave_type.name %></td>
         <td class="col-3"><%=e.leave_count %></td>
