Rails-3-upgrade: Rename RAILS_ROOT to Rails.root

--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -22,17 +22,17 @@
 <html dir="<%= (rtl?) ? 'rtl' : 'ltr' %>">
   <head>
     <% @direction = (rtl?) ? 'rtl/' : '' %>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <%= stylesheet_link_tag([@direction+'application', @direction+'_styles/ui.all'])%>
     <%= stylesheet_link_tag(*get_pdf_stylesheets) %>
     <%= stylesheet_link_tag  @direction+"_layouts/pdf" %>
-    
+
     <%= wicked_pdf_javascript_include_tag 'cache/javascripts/all' %>
     <%= javascript_include_tag :all %>
 
-    <link rel="stylesheet" type="text/css" href="<%="#{RAILS_ROOT}/public/stylesheets/#{@direction}_layouts/pdf.css" %>" media="all" />
-    <link rel="stylesheet" type="text/css" href="<%="#{RAILS_ROOT}/public/stylesheets/#{get_pdf_stylesheets}.css"%>" media="all" />
-    <link rel="stylesheet" type="text/css" href="<%= "#{RAILS_ROOT}/public/stylesheets/#{@direction}_styles/ui.all.css"%>" media="all" />
+    <link rel="stylesheet" type="text/css" href="<%="#{Rails.root}/public/stylesheets/#{@direction}_layouts/pdf.css" %>" media="all" />
+    <link rel="stylesheet" type="text/css" href="<%="#{Rails.root}/public/stylesheets/#{get_pdf_stylesheets}.css"%>" media="all" />
+    <link rel="stylesheet" type="text/css" href="<%= "#{Rails.root}/public/stylesheets/#{@direction}_styles/ui.all.css"%>" media="all" />
 
     <script type="text/css">
       .page {
